k8s-manifests/Componentes_core/kubernetes/rmq/rmq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmq-ingress
  namespace: cima-rmq
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - rmq.cima.es
  rules:
    - host: rmq.cima.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cima-rmq
                port:
                  number: 15672
